Fix spacing issue with patients#show thumbnails.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,7 +17,7 @@ a{
   -o-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
-  padding: 20px 0;
+  padding: 24px 0;
 }
 
 .img-rotate-plus {
